# traildiary-backend

./: .gitignore  README.md  createPublicFiles.py  createPublicFiles.sh  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
mysite/: authentication.py  env.sample  settings.py  urls.py
mysite/mysite/: settings.py  urls.py
mysite/traildiary/: admin.py  apps.py  models.py  serializers.py  services.py  views.py
traildiary/: admin.py  models.py  serializers.py  services.py  views.py
