[tool.poetry]
name = "traildiary-backend"
version = "0.1.0"
description = ""
authors = ["Gregor Hyneck <gregorhyneck@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
django = "4.1.7"
django-environ = "0.10.0"
djangorestframework = "3.14.0"
djangorestframework-simplejwt = "5.2.2"
gpxpy = "1.5.0"
gunicorn = "21.2.0"
wheel = "^0.44.0"
setuptools = "^75.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
