[tool.poetry]
name = "traildiary-backend"
version = "0.1.0"
description = ""
authors = ["Gregor Hyneck <gregorhyneck@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.3"
django-environ = "^0.11.2"
djangorestframework = "^3.15.2 "
djangorestframework-simplejwt = "^5.4.0"
gpxpy = "^1.6.2"
gunicorn = "^23.0.0"
wheel = "^0.45.1"
setuptools = "^75.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
