[tool.poetry]
name = "traildiary-backend"
version = "0.1.0"
description = ""
authors = ["Gregor Hyneck <gregorhyneck@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.2.11"
django-environ = "^0.12.0"
djangorestframework = "^3.15.2"
djangorestframework-simplejwt = "^5.3.1"
gpxpy = "^1.6.2"
gunicorn = "^25.0.3"
wheel = "^0.46.3"
setuptools = "^82"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
